removed species and cleaned up infographic

--- a/ODOTCOMM18.Rmd
+++ b/ODOTCOMM18.Rmd
@@ -73,7 +73,7 @@ write_csv(commercialized_shrimp, "prep/data/commercialized_shrimp_nmfs.csv")
 ```
 
 #Saltmarsh Vegetarian 
-Data reference: Coral Reef Monitoring Program  <https://cims.coastal.louisiana.gov/fulltableexports.aspx> 
+Data reference: CIMS   <https://cims.coastal.louisiana.gov/fulltableexports.aspx> 
 Species: smooth cordgrass, common reed, saltgrass, saltmeadow cordgrass, turtleweed, needlegrass rush
 ```{r Saltmarsh Vegetation}
 
