--- a/rmd/modals/phragmites.Rmd
+++ b/rmd/modals/phragmites.Rmd
@@ -20,7 +20,7 @@ library(infographiq)
 ```{r out.width='100%'}
 tryCatch(
     plot_dygraph_timeseries(
-        csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/phragmites_cims.csv",
+        csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/phragmites_transect.csv",
         title   = "Roseau Cane Mean Percent Cover",
         y_label = "Mean % Cover",
         col_t   = "Year",
@@ -33,3 +33,14 @@ tryCatch(
     error = function(e) e
 )
 ```
+## Roseau Cane (*Phragmites australis*)
+Figure: Percent cover of roseau cane (*Phragmites australis*) at Louisiana sampling sites, 1994-2016
+
+Roseau cane, a grass species known in other parts of the country as “common reed”, is one of the most widely-spread plants in the world.The majority of roseau cane in North America today is invasive, having come from Europe in the ballast of ships. However, there is evidence that at least one strain of the roseau cane of Louisiana is native to the state’s coastal marshes. Roseau cane is commonly regarded as a destructive invasive species in other parts of the country, because it grows rapidly in dense, tall, stands, and can outcompete local plants by blocking out light. While many continue to regard roseau cane as an invasive nuisance, it provides important wildlife habitat in Louisiana coastal marshes. It is also an important land builder, trapping sediment washed downstream by the Mississippi River to form new coastal marsh. Due to its rapid growth and stabilizing root system, it helps prevent erosion of land during storm events. Recently, roseau cane in Louisiana has become threatened by an invasive Asian insect known as the roseau cane mealy bug. This insect, or scale, has the potential to wipe out whole stands of roseau cane and is spreading rapidly across South Louisiana. Researchers are working to slow marsh loss to the mealy bug because the dead cane stands turn into open water, expediting further land loss in the state.  
+
+**References**: Herbaceous marsh vegetation data compiled from the Coastal Information Monitoring System (CIMS) via the Coastal Protection and Restoration Authority (CPRA) (https://cims.coastal.louisiana.gov/monitoring-data/)
+
+*CIMS provides geospatial, tabular database and document access to CPRA’s suite of protection and restoration projects, Coastwide Reference Monitoring System (CRMS) stations, the 2017 Master Plan, project scheduling, geophysical data, and coastal community resiliency information.*
+
+Louisiana Department of Wildlife and Fisheries. Roseau cane scale on the delta. (http://www.wlf.louisiana.gov/fishing/roseau-cane-scale-delta)
+
