--- a/rmd/modals/bluecrabs.Rmd
+++ b/rmd/modals/bluecrabs.Rmd
@@ -51,7 +51,7 @@ tryCatch(
     error = function(e) e
 )
 ```
-## Blue Crab (*Callinectes sapidus*)
+**Blue Crab (*Callinectes sapidus*)**
  
 Figure 1: Louisiana’s annual commercial harvest of blue crab (*Callinectes sapidus*), represented as total pounds harvested/year, 1950-2016
  
