--- a/rmd/modals/nutria.Rmd
+++ b/rmd/modals/nutria.Rmd
@@ -51,7 +51,7 @@ tryCatch(
     error = function(e) e
 )
 ```
-## Nutria (*Myocastor coypus*)
+**Nutria (*Myocastor coypus*)**
 
 Figure 1: Total number of nutria harvested and submitted to the Louisiana Department of Wildlife and Fisheries (November-March) for bounty from 2002-2016 (as represented by tails collected).
 
