--- a/rmd/modals/oysters.Rmd
+++ b/rmd/modals/oysters.Rmd
@@ -51,7 +51,7 @@ tryCatch(
     error = function(e) e
 )
 ```
-## Eastern Oyster (*Crassostrea virginica*) Reefs
+**Eastern Oyster (*Crassostrea virginica*)**
  
 Figure 1: Louisiana’s annual commercial harvest of eastern oyster (*Crassostrea virginica*), represented as total pounds harvested/year, 1950-2016
  
