--- a/rmd/modals/shrimp.Rmd
+++ b/rmd/modals/shrimp.Rmd
@@ -51,7 +51,7 @@ tryCatch(
     error = function(e) e
 )
 ```
-## Brown (*Farfantepenaeus aztecus*) and White (*Litopenaeus setiferus*) Shrimp 
+**Brown shrimp (*Farfantepenaeus aztecus*) and White shrimp (*Litopenaeus setiferus*)**
  
 Shrimp are iconic part of Louisiana culture. While several shrimp species inhabit the Gulf of Mexico, the most commonly fished and economically-important of these are the brown and white shrimp. Both species exhibit similar life histories, spawning in bays and deep offshore waters. Larval shrimp are swept with the tide into coastal marshes and estuaries, where they remain until they are large enough to return to the open waters. In the coastal marshes, these larvae provide an important prey source for many marsh species.
  
