--- a/rmd/modals/snails.Rmd
+++ b/rmd/modals/snails.Rmd
@@ -15,7 +15,7 @@ library(infographiq)
 ```
 
 <base target="_parent">
-## Periwinkle Snail (*Littoraria irrorata*)
+**Periwinkle snail (*Littoraria irrorata*)**
 
 Periwinkle snails depend on damp marsh conditions to keep their gills wet, but may migrate up tall marsh grasses above the tideline to avoid predation by blue crabs and diamondback terrapins. They form an important part of the marsh food web, but have the potential to accelerate marsh land loss through overconsumption of smooth cordgrass if populations are not kept in check through predation.
 
