--- a/rmd/modals/tern.Rmd
+++ b/rmd/modals/tern.Rmd
@@ -15,6 +15,6 @@ library(infographiq)
 ```
 
 <base target="_parent">
-# Forster’s Tern (*Sterna forsteri*)
+**Forster’s Tern (*Sterna forsteri*)**
 
 Forster’s terns are a resident species in Louisiana coastal marshes, and plunge dive for fish and small arthropods over open water and canals. They breed colonially in marshes and sometimes nest on mats of floating marsh vegetation or on top of muskrat lodges. Not much is known about the status of this species in Louisiana, although they are a species of conservation concern, representing an opportunity for valuable future research.
