--- a/rmd/modals/drum.Rmd
+++ b/rmd/modals/drum.Rmd
@@ -51,7 +51,7 @@ tryCatch(
     error = function(e) e
 )
 ```
-## Red (*Sciaenops ocellatus*) and Black Drum (*Pogonias cromis*)
+**Red (*Sciaenops ocellatus*) and Black Drum (*Pogonias cromis*)**
  
 Figure 1: Louisiana’s annual commercial harvest of red (*Sciaenops ocellatus*) and black (*Pogonias cromis*) drum, represented as total pounds caught/year, 1950-2016
  
