--- a/rmd/modals/mangroves.Rmd
+++ b/rmd/modals/mangroves.Rmd
@@ -33,7 +33,7 @@ tryCatch(
     error = function(e) e
 )
 ```
-## Black Mangrove (*Avicennia germinans*)
+**Black Mangrove (*Avicennia germinans*)**
 
 Figure: Percent cover of black mangrove (*Avicennia germinans*) in Louisiana, 1994-2016
 
