--- a/rmd/modals/bluecrabs.Rmd
+++ b/rmd/modals/bluecrabs.Rmd
@@ -57,7 +57,9 @@ Figure 1: Louisiana’s annual commercial harvest of blue crab (*Callinectes sap
  
 Figure 2: Commercial value of Louisiana’s annual blue crab harvest (*Callinectes sapidus*), represented by US dollars, 1950-2016
  
-Louisiana has the largest blue crab fishery in the world, and the species has enormous economic and cultural importance for the state. Blue crabs breed offshore, but their larvae swim inland to coastal marshes and estuaries. There, they mature before returning to open waters to spawn. Blue crabs play roles as both predator and prey in the ecosystem, making them an significant marsh species. As predators, they consume pretty much anything edible, helping to keep the marsh clean and free of detritus. As prey, they are food for wading birds and commercially-important pelagic fish species like red drum. Blue crab harvest yields declined following the Deepwater Horizon oil spill in 2010, but rebounded in the years after. The quick recovery may be attributed to temporary fisheries closures directly after the spill, which allowed crab stocks time to replenish. 
+The blue crab population in the Gulf of Mexico is strongly tied to coastal marsh health. Louisiana has the largest blue crab fishery in the world, the product of its extensive marsh networks and deep offshore shelves, and the species has enormous economic and cultural importance for the state. Blue crabs breed offshore, but their larvae swim inland to coastal marshes and estuaries. There, they mature before returning to open waters to spawn. Blue crabs play roles as both predator and prey in the ecosystem, making them an important marsh species. As predators, they consume pretty much anything edible, helping to keep the marsh clean and free of detritus. As prey, they are food for wading birds and commercially-important pelagic fish species like red drum. 
+
+Blue crab population is done primarily from state harvest records, which provide an imperfect record of population trajectories. Blue crab commercial yields declined following the Deepwater Horizon oil spill in 2010; however, this decline in yield was due temporary fisheries closures following the spill. The closure likely enabled the population to recover somewhat from high post-spill mortality, but the overall effect of the spill on blue crab abundance is not known. We do know that blue crab harvests have never reached pre-spill levels, and that the spill likely negatively affected the species’ ability to recover from environmental disturbance. While long-term trends indicate that the blue crab population is relatively stable, overfishing is a constant concern. To ensure that the blue crab fishery is sustainable, the state models population trajectories and implements frequent fishing regulations, including seasonal closures. 
  
 **References**: Fisheries data compiled from the NOAA National Marine Fisheries Service Annual Commercial Landing Statistics, via:
 (https://www.st.nmfs.noaa.gov/commercial-fisheries/commercial-landings/annual-landings/index)
@@ -65,3 +67,5 @@ Louisiana has the largest blue crab fishery in the world, and the species has en
 Bourgeois, M., J. Marx, K. Semon. 2014. Louisiana Blue Crab Fishery Management Plan. Louisiana Department of Wildlife and Fisheries Office of Fisheries.
 (http://www.wlf.louisiana.gov/sites/default/files/pdf/page/37762-fishery-management-plans-marine/finalbluecrabfmp11-7-14.pdf)
  
+West, J., H. Blanchet, and P. Cagle. 2018. Update Assesment of Blue Crab in Louisiana Waters 2018 Report. Louisiana Department of Wildlife and Fisheries, Office of Fisheries.
+(http://www.wlf.louisiana.gov/sites/default/files/pdf/page/37756-stock-assessments/labcassessment2018.pdf)
