--- a/rmd/modals/drum.Rmd
+++ b/rmd/modals/drum.Rmd
@@ -57,8 +57,13 @@ Figure 1: Louisiana’s annual commercial harvest of red (*Sciaenops ocellatus*)
  
 Figure 2: Annual commercial value of Louisiana’s red (*Sciaenops ocellatus*) and black (*Pogonias cromis*) drum fisheries, represented by US dollars, 1950-2016
  
-Like many important commercial fisheries species in Louisiana, red and black drum use coastal marshes and estuaries as nursery habitat. Adult fish then move to more open waters when large enough to avoid predation, usually around 5 years of age. Both fish species are long lived, with adults living up to 40 years and reaching around 30 pounds. Adult black drum feed mainly on oysters, using specialized teeth in the back of their throat to crush their thick shells. Red drum have more varied diets, with important food items including blue crabs, shrimp, and other fish.
+Intensive conservation and fisheries management efforts have stalled the precipitous decline of Louisiana’s famous “redfish”, but the changing coastal ecosystem spells an uncertain future for drum species in the Gulf of Mexico.  Like many important commercial fisheries species in Louisiana, red and black drum use coastal marshes and estuaries as nursery habitat. Adult fish then move to more open waters when large enough to avoid predation, usually around 5 years of age. Both fish species are long lived, with adults living up to 40 years and reaching around 30 pounds. Adult black drum feed mainly on oysters, using specialized teeth in the back of their throat to crush their thick shells. Red drum have more varied diets, with important food items including blue crabs, shrimp, and other fish. The prey of both species of drum are reliant on coastal marshes, linking red and black drum to marsh health across their life histories. 
  
-Both fish were historically important commercial species, but red drum (or “redfish”) consumption exploded in the 1980s due to the popularization of Creole cuisine by the Louisiana chef Paul Prudhomme. His famous blackened redfish dish became so popular across the country that the red drum population crashed, leading to the federal government officially closing commercial harvest of the species in the Gulf of Mexico in 1987. The population has somewhat rebounded since then, and recreational fishing of red drum is now allowed.
+Both fish were historically important commercial species, but red drum (or “redfish”) consumption exploded in the 1980s due to the popularization of Creole cuisine by the Louisiana chef Paul Prudhomme. His famous blackened redfish dish became so popular across the country that the red drum population crashed, leading to the federal government officially closing commercial harvest of the species in the Gulf of Mexico in 1987. The population has somewhat rebounded since then, and recreational fishing of red drum is currently allowed. Black drum have never reached the culinary heights of their red relatives, but they are growing in popularity. The state encourages black drum fishing due in part to reduce the impact of their heavy oyster consumption, which can lead to economic losses. 
  
 **References**: Fisheries data compiled from the NOAA National Marine Fisheries Service Annual Commercial Landing Statistics, via: (https://www.st.nmfs.noaa.gov/commercial-fisheries/commercial-landings/annual-landings/index)
+
+Louisiana Sea Grant. Louisiana Fisheries Fact Sheet: Understanding Red Fish Biology. https://www.seagrantfish.lsu.edu/resources/factsheets/redfish.htm
+
+Louisiana Sea Grant. Louisiana Biological Info: Black Drum. 
+https://www.seagrantfish.lsu.edu/biological/drum/blackdrum.htm
