--- a/rmd/modals/mangroves.Rmd
+++ b/rmd/modals/mangroves.Rmd
@@ -37,8 +37,9 @@ tryCatch(
 
 Figure: Percent cover of black mangrove (*Avicennia germinans*) in Louisiana, 1994-2016
 
-Black mangrove, a woody, subtropical shrub, is at the northernmost part of its range in Louisiana, where it has a patchy distribution in coastal marsh and on barrier islands. This shrub is intolerant to freezing, and its spread has been historically held in check by periodic cold weather events. As the climate in Louisiana warms, black mangrove is expanding its range, and it is predicted to greatly increase its distribution in the future.
-Black mangrove is a natural member of the Gulf of Mexico coastal marsh ecosystem. It provides habitat for many saltmarsh species, including nesting birds like marsh wrens, orchard orioles, and brown pelicans. It also helps buffer coastal marshes and barrier islands against storm damage, helping to reduce land loss to erosion. However, black mangrove expansion may also have some negative consequences for the coastal marsh ecosystem. Because mature black mangrove can block the sun from reaching the ground, it has the potential to outcompete important marsh plants like smooth cordgrass. If smooth cordgrass declines as a result, there may be negative consequences for grass-dependent species like periwinkle snails and seaside sparrows. Additionally, shrimp and blue crab have been found to be less abundant in mangrove-dominated marshes, indicating that the black mangrove expansion in Louisiana may have important long-term ramifications for the state’s fisheries.
+Coastal marshes in the Gulf of Mexico are in constant flux, subject to continual disturbances like storms, droughts, and land loss that all threaten to shift the balance between dominant species. The spread of black mangrove is a key example of the dynamic nature of these marshes. Black mangrove, a woody subtropical shrub, is at the northernmost part of its range in Louisiana, where it has a patchy distribution in coastal marsh and on barrier islands. This shrub is intolerant to freezing, and its spread has been historically held in check by periodic cold weather events. Hard freezes in the winters of 2009 and 2010 led to the sharp decline of black mangrove cover seen in the figure. While the shrub typically rebounds quickly following such weather events, the Deepwater Horizon spill the following spring likely slowed regrowth and limited recovery. Despite such setbacks, black mangrove is expanding its range as winter temperatures in Louisiana warm due to global climate change. The shrub is predicted to greatly increase its distribution across the Gulf of Mexico in the future. 
+
+Black mangrove is a natural member of the Gulf of Mexico coastal marsh ecosystem. It provides habitat for many species, including nesting birds like marsh wrens, reddish egrets, and brown pelicans. It also helps buffer coastal marshes and barrier islands against storm damage, helping to reduce land loss to erosion. Because of this, coastal restoration planning often includes planting black mangrove to help retain new sediment and ensure restoration success. However, black mangrove expansion may also have negative consequences for the coastal marsh ecosystem. Because mature black mangrove can block the sun from reaching the ground, it has the potential to outcompete important marsh plants like smooth cordgrass. If smooth cordgrass declines as a result, there may be negative consequences for grass-dependent species like periwinkle snails and seaside sparrows. Additionally, shrimp and blue crab have been found to be less abundant in mangrove-dominated marshes, indicating that black mangrove expansion in Louisiana may have important long-term ramifications for the state’s fisheries. More research, funded in part by the Deepwater Horizon settlement, is being implemented across the Gulf of Mexico to investigate the changing role of black mangrove in coastal marsh communities, and how black mangrove may contribute to coastal marsh restoration. 
 
 **References**: Herbaceous marsh vegetation data compiled from the Coastal Information Monitoring System (CIMS) via the Coastal Protection and Restoration Authority (CPRA). (https://cims.coastal.louisiana.gov/monitoring-data/)
 
