--- a/rmd/modals/oysters.Rmd
+++ b/rmd/modals/oysters.Rmd
@@ -57,7 +57,7 @@ Figure 1: Louisiana’s annual commercial harvest of eastern oyster (*Crassostre
  
 Figure 2: Commercial value of Louisiana’s annual harvest of eastern oyster (*Crassostrea virginica*), represented by US dollars, 1950-2016
  
-The large, stable reefs formed by the conglomeration of oysters have many important functions in coastal marshes. Oyster reefs form the base for marine communities and are used as shelter by larval shrimp, crabs, and fish. Reefs also help stabilize coastal marshes against erosion and minimize the effects of storm surges. Oysters are an important food source for species like black drum, and are themselves one of the most important commercial fisheries in Louisiana. Indeed, oyster farming forms the economic backbone of many coastal communities. The oyster fishery in Louisiana plunged precipitously following the 2010 Deepwater Horizon oil spill, but has largely recovered since. Restoration of oyster reefs has become a key focus of the oil spill recovery efforts, as oysters are vital to both coastal marsh health and the commercial fishing industry
+Like blue crabs, oysters have staged an encouraging rebound since the 2010 oil spill. The large, stable reefs formed by the conglomeration of oysters have many important functions in coastal marshes. Oyster reefs form the base for marine communities and are used as shelter by larval shrimp, crabs, and fish. Reefs also help stabilize coastal marshes against erosion and minimize the effects of storm surges. Oysters are an important food source for species like black drum, and are themselves one of the most important commercial fisheries in Louisiana. Indeed, oyster farming forms the economic backbone of many coastal communities. The oyster fishery in Louisiana plunged precipitously following the 2010 Deepwater Horizon oil spill, but has largely recovered since. Restoration of oyster reefs has become a key focus of the oil spill recovery efforts, as oysters are vital to both coastal marsh health and the commercial fishing industry
  
 **References**: Fisheries data compiled from the NOAA National Marine Fisheries Service Annual Commercial Landing Statistics, via: (https://www.st.nmfs.noaa.gov/commercial-fisheries/commercial-landings/annual-landings/index)
  
