--- a/rmd/modals/phragmites.Rmd
+++ b/rmd/modals/phragmites.Rmd
@@ -36,7 +36,9 @@ tryCatch(
 **Roseau Cane (*Phragmites australis*)**
 Figure: Percent cover of roseau cane (*Phragmites australis*) at Louisiana sampling sites, 1994-2016
 
-Roseau cane, a grass species known in other parts of the country as “common reed”, is one of the most widely-spread plants in the world.The majority of roseau cane in North America today is invasive, having come from Europe in the ballast of ships. However, there is evidence that at least one strain of the roseau cane of Louisiana is native to the state’s coastal marshes. Roseau cane is commonly regarded as a destructive invasive species in other parts of the country, because it grows rapidly in dense, tall, stands, and can outcompete local plants by blocking out light. While many continue to regard roseau cane as an invasive nuisance, it provides important wildlife habitat in Louisiana coastal marshes. It is also an important land builder, trapping sediment washed downstream by the Mississippi River to form new coastal marsh. Due to its rapid growth and stabilizing root system, it helps prevent erosion of land during storm events. Recently, roseau cane in Louisiana has become threatened by an invasive Asian insect known as the roseau cane mealy bug. This insect, or scale, has the potential to wipe out whole stands of roseau cane and is spreading rapidly across South Louisiana. Researchers are working to slow marsh loss to the mealy bug because the dead cane stands turn into open water, expediting further land loss in the state.  
+A grass once considered an invasive nuisance is becoming known as an important marsh species only now that it is threatened by another invader. Roseau cane, a grass species known in other parts of the country as “common reed”, is one of the most widely-spread plants in the world. The majority of roseau cane in North America today is invasive, having come from Europe in the ballast of ships. However, there is evidence that at least one strain of the roseau cane of Louisiana is native to the state’s coastal marshes. Roseau cane is commonly regarded as a destructive invasive species in other parts of the country, because it grows rapidly in dense, tall, stands, and can outcompete local plants by blocking out light. While many continue to regard roseau cane as an invasive nuisance, it provides important wildlife habitat in Louisiana coastal marshes. It is also an important land builder, trapping sediment washed downstream by the Mississippi River to form new coastal marsh. Due to its rapid growth and stabilizing root system, it also helps prevent erosion of land during storm events. 
+
+Roseau cane cover declined somewhat following the Deepwater Horizon spill, but was able to quickly recover. However, the stress caused by this event may have helped make cane more susceptible to a new threat. Recently, roseau cane in Louisiana has become threatened by an invasive Asian insect known as the roseau cane mealy bug, which may have contributed to the massive cane die-offs beginning in 2012. This insect, or scale, first identified in 2016, has the potential to wipe out whole stands of roseau cane, and is spreading rapidly across South Louisiana. The dead cane stands then transition into open water, expediting further land loss in the state. Because of this, researchers are racing to find a way to kill the scale and protect the remaining roseau cane in the state’s coastal marshes. 
 
 **References**: Herbaceous marsh vegetation data compiled from the Coastal Information Monitoring System (CIMS) via the Coastal Protection and Restoration Authority (CPRA) (https://cims.coastal.louisiana.gov/monitoring-data/)
 
