--- a/rmd/modals/sparrow.Rmd
+++ b/rmd/modals/sparrow.Rmd
@@ -17,7 +17,7 @@ library(infographiq)
 <base target="_parent">
 **Seaside Sparrow (*Ammodramus maritimus*)**
 
-Seaside sparrows are the most saltmarsh-dependent songbird species in North America. They are considered a species of conservation concern across their range due to coastal land loss. Louisiana seaside sparrows are year-round saltmarsh residents, where they eat seeds, insects, and even small crabs. They nest in smooth cordgrass and other marsh grasses, and their nests can sometimes flood during high spring tides, which may be increasing with sea level rise .
+While marsh loss is the most immediate threat to the seaside sparrow, oil spills may also contribute to population declines of this poorly-understood songbird. Seaside sparrows are the most saltmarsh-dependent songbird species in North America. They are considered a species of conservation concern across their range due to coastal land loss. Louisiana seaside sparrows are year-round coastal marsh residents, where they eat seeds, insects, and even small crabs. They nest in smooth cordgrass and other marsh grasses. Their nests can sometimes flood during high spring tides, a threat that may be increasing with sea level rise.
 
 Not much was known about seaside sparrow population dynamics before the 2010 Deepwater Horizon oil spill, but efforts are underway to improve monitoring. A post-spill study found that lower seaside sparrow reproductive success in oiled versus unoiled sites could possibly be attributed to direct effects of oil exposure. Feather and crop samples obtained from collected birds indicated that from oil carbon entered lower levels of the food web following the spill, leading to its concentration in the tissues of upper-level predators such as seaside sparrows. These toxins have potential to negatively affect the health of seaside sparrows by increasing incidences of disease. The spill may also have indirectly affected seaside sparrow reproduction by suppressing populations of spiders and other invertebrates, thereby reducing food availability for chicks.
 
