reran code. Red Drum doesn't hover in saltmarsh svg

--- a/rmd/modals/tern.Rmd
+++ b/rmd/modals/tern.Rmd
@@ -17,4 +17,4 @@ library(infographiq)
 <base target="_parent">
 **Forster’s Tern (*Sterna forsteri*)**
 
-Forster’s terns are a resident species in Louisiana coastal marshes, and plunge dive for fish and small arthropods over open water and canals. They breed colonially in marshes and sometimes nest on mats of floating marsh vegetation or on top of muskrat lodges. Not much is known about the status of this species in Louisiana, although they are a species of conservation concern, representing an opportunity for valuable future research.
+As Louisiana’s coastal marshes disappear, the need to learn more about the species that rely on them becomes more urgent. Highlighting the gaps in our knowledge along with the trajectories of more well-studied species can provide an important blueprint for research planning. Not much is known about Forster’s terns in Louisiana despite their status as a species of conservation concern, representing an opportunity for valuable future research. Forster’s terns are a resident species in the state’s coastal marshes, where they plunge dive for fish and small arthropods over open water and canals. They are colonial, and sometimes nest on mats of floating marsh vegetation or on top of muskrat lodges. 
